Fix all ESLint warnings and build issues
- Fixed unused variables in Sales.js by commenting out unused state
- Fixed React Hook dependency warnings using useCallback pattern
- Cleaned up unused imports and variables in App.js
- Updated vercel.json to simplified Create React App format
- Build now compiles cleanly without warnings

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,17 +1,17 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "devCommand": "npm start",
+  "installCommand": "npm install",
   "routes": [
     {
       "src": "/static/(.*)",
       "headers": { "cache-control": "s-maxage=31536000,immutable" },
       "dest": "/static/$1"
     },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { 
+      "src": "/(.*)", 
+      "dest": "/index.html" 
+    }
   ]
 }
