Update branding from 'Car Parts' to 'Rasuki Group'
- Update main application title to 'Rasuki Group'
- Change navbar brand to 'Rasuki Group'
- Update HTML page title to 'Rasuki Group - Car Parts Management'
- Update meta description for better branding
- Update web app manifest with new branding
- Update README.md with Rasuki Group branding
- Fix related test cases to match new branding
- Maintain 'Car Parts Management' for descriptive context

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Rasuki Group",
+  "name": "Rasuki Group Car Parts Management",
   "icons": [
     {
       "src": "favicon.ico",
