--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "jest --testTimeout=10000",
-    "test:watch": "jest --watch --testTimeout=10000"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:unit": "jest --selectProjects backend-unit frontend",
+    "test:integration": "jest --selectProjects backend-integration",
+    "test:production": "cd scripts && npm install && npm run health-check",
+    "health-check": "cd scripts && node production-health-check.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -14,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.5",
     "react-bootstrap": "^2.10.10"
   },
