Implement comprehensive quantity management system
- Add quantity tracking to parts (total_stock, available_stock, sold_stock, reserved_stock)
- Implement multi-item, multi-quantity sales with shopping cart
- Add stock movement tracking and audit trail
- Enhanced bill management with detailed line items
- Support for stock adjustments and refund processing with stock restoration
- Add database migration for quantity management (16-implement-quantity-management.sql)
- Update frontend components for quantity support
- Add comprehensive documentation and migration guides

Features implemented:
✅ Initial stock specification (defaults to 1)
✅ Manual stock adjustments by admins
✅ Reservation system with stock allocation
✅ Multi-quantity bills with multiple parts
✅ Partial sales support
✅ Real-time stock validation
✅ Automatic stock status updates
✅ Complete audit trail

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:unit": "jest --selectProjects backend-unit frontend",
     "test:integration": "jest --selectProjects backend-integration",
     "test:production": "cd scripts && npm install && npm run health-check",
-    "health-check": "cd scripts && node production-health-check.js"
+    "health-check": "cd scripts && node production-health-check.js",
+    "migrate:quantity": "echo 'Run 16-implement-quantity-management.sql in Railway PostgreSQL console'",
+    "backup:current": "echo 'Backup current system before quantity migration'"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
