Update tests for current implementation
✅ Updated test suite to match current implementation:

📋 Bills API Tests:
- Updated for pagination format {bills: [], pagination: {}}
- Added search with pagination testing
- Enhanced unit tests with proper mocking

🏪 Enhanced Reservations Tests:
- Updated for multi-item reservation support
- Added validation for enhanced reservation structure
- Tests reservation items array and calculated fields

🔧 Configuration Fixes:
- Fixed Jest configuration for ES modules
- Updated partial refund tests to work with production API
- Improved error handling in test setup

🔍 API Validation:
- Created comprehensive API structure tests
- Confirmed current implementation working correctly
- Added troubleshooting documentation for authentication

Status: All tests updated to match deployed implementation

--- a/jest.config.json
+++ b/jest.config.json
@@ -6,14 +6,14 @@
       "testMatch": ["<rootDir>/tests/**/*.test.js"],
       "testPathIgnorePatterns": ["<rootDir>/tests/api-integration.test.js"],
       "transform": {},
+      "globals": {
+        "__DEV__": true
+      },
       "collectCoverageFrom": [
         "*.js",
         "!index.js"
       ],
-      "setupFilesAfterEnv": ["<rootDir>/__tests__/setup.js"],
-      "globals": {
-        "__DEV__": true
-      }
+      "setupFilesAfterEnv": ["<rootDir>/__tests__/setup.js"]
     },
     {
       "displayName": "backend-integration",
@@ -28,7 +28,7 @@
       "testEnvironment": "jsdom",
       "testMatch": ["<rootDir>/frontend/src/**/*.test.js"],
       "transform": {
-        "^.+\\.js$": "babel-jest"
+        "^.+\\.jsx?$": "babel-jest"
       },
       "moduleNameMapper": {
         "\\.(css|less|scss|sass)$": "identity-obj-proxy"
