--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -1,11 +1,12 @@
 [variables]
 NODE_ENV = "production"
+NPM_CONFIG_CACHE = "/tmp/.npm"
 
 [phases.setup]
 nixPkgs = ["nodejs-18_x", "npm-9_x"]
 
 [phases.install]
-cmds = ["npm ci"]
+cmds = ["npm cache clean --force", "npm ci"]
 
 [phases.build]
 cmds = ["npm run build"]
