fix: simplify Railway deployment with auto-detection
- Remove custom railway.json and nixpacks.toml to let Railway auto-detect
- Add CI=false to build script to avoid strict mode issues
- Create simple start.sh script for Railway deployment
- Use --prefer-offline to avoid cache conflicts
- Let Railway use default Nixpacks behavior for Node.js apps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
+    "build:railway": "npm install --prefer-offline && CI=false npm run build",
+    "serve": "serve -s build -p $PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
