Force frontend rebuild after CORS fix
- Add comment to trigger frontend redeployment
- Ensures frontend uses latest backend with fixed CORS headers

--- a/frontend/.env.staging
+++ b/frontend/.env.staging
@@ -5,3 +5,4 @@ REACT_APP_API_URL=https://carparts-backend-staging.up.railway.app
 GENERATE_SOURCEMAP=false
 CI=false
 DISABLE_ESLINT_PLUGIN=true
+# Updated: Force rebuild after CORS fix
