Add consolidated migration and comprehensive testing suite
- 00-consolidated-migration.sql: Complete schema from migrations 01-18
- validate-staging-schema.js: Safe schema validation tool
- test-staging-remote.js: Comprehensive API testing
- test-refund-staging.js: Refund system testing
- test-frontend-staging.js: Frontend integration testing
- Updated jest.config.json for ES module support

--- a/jest.config.json
+++ b/jest.config.json
@@ -20,6 +20,10 @@
       "testEnvironment": "node",
       "testMatch": ["<rootDir>/tests/api-integration.test.js"],
       "transform": {},
+      "extensionsToTreatAsEsm": [".js"],
+      "globals": {
+        "__DEV__": true
+      },
       "testTimeout": 30000,
       "setupFilesAfterEnv": ["<rootDir>/__tests__/setup.js"]
     },
