--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:unit": "jest --selectProjects backend-unit frontend",
-    "test:integration": "jest --selectProjects backend-integration",
+    "test:watch": "jest --watch", 
+    "test:staging": "node tests/test-staging-remote.js",
+    "test:refund": "node tests/test-refund-staging.js",
+    "test:frontend": "node tests/test-frontend-staging.js",
     "test:production": "cd scripts && npm install && npm run health-check",
     "health-check": "cd scripts && node production-health-check.js",
     "migrate:quantity": "echo 'Run 16-implement-quantity-management.sql in Railway PostgreSQL console'",
