--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "build": "CI=false react-scripts build",
     "build:railway": "npm install --prefer-offline && CI=false npm run build",
     "serve": "serve -s build -p $PORT",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
