🔧 Fix CI workflow - add --passWithNoTests to frontend test step
- GitHub workflow was explicitly running npm test with flags that override package.json
- Added --passWithNoTests flag to the workflow's frontend test step
- This should resolve the 'No tests found, exiting with code 1' CI failure

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Run frontend tests
         run: |
           cd frontend
-          npm test -- --coverage --watchAll=false
+          npm test -- --coverage --watchAll=false --passWithNoTests
       
       - name: Build frontend
         run: |
