fix: Configure production environment URLs for Railway deployment
- Update frontend .env.production to use production backend URL
- Add FRONTEND_URL and JWT_SECRET to backend production environment
- Fix CORS configuration for production deployment
- Ensure frontend points to carparts-backend.up.railway.app instead of staging

This resolves the 'Failed to fetch' login error by properly configuring
the frontend-backend communication URLs for production.

--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,12 @@ RAILWAY_ENVIRONMENT=production
 NODE_ENV=production
 PORT=3001
 
+# CORS Configuration
+FRONTEND_URL=https://rasuki.up.railway.app
+
+# Security Configuration
+JWT_SECRET=your-production-jwt-secret-key-change-this-in-production
+
 # Database Configuration (Railway provides these automatically)
 # DATABASE_URL is auto-injected by Railway for linked PostgreSQL service
 
