--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-# Railway Frontend Environment Variables - Updated to use staging backend
-REACT_APP_API_URL=https://carparts-backend-staging.up.railway.app
+# Railway Frontend Environment Variables - Production Configuration
+REACT_APP_API_URL=https://carparts-backend.up.railway.app
 GENERATE_SOURCEMAP=false
 CI=false
