--- a/.env.production
+++ b/.env.production
@@ -15,7 +15,7 @@ JWT_SECRET=your-production-jwt-secret-key-change-this-in-production
 # DATABASE_URL is auto-injected by Railway for linked PostgreSQL service
 
 # Frontend API Configuration
-REACT_APP_API_URL=https://carparts-api.up.railway.app
+REACT_APP_API_URL=https://carparts-backend.up.railway.app
 
 # JWT Configuration
 JWT_SECRET=your-production-jwt-secret-here
