--- a/.env.staging
+++ b/.env.staging
@@ -9,14 +9,14 @@ PORT=3001
 # DATABASE_URL is auto-injected by Railway for linked PostgreSQL service
 
 # Frontend API Configuration
-REACT_APP_API_URL=https://carparts-staging-api.up.railway.app
+REACT_APP_API_URL=https://carparts-backend-staging.up.railway.app
 
 # JWT Configuration
 JWT_SECRET=your-staging-jwt-secret-here
 JWT_EXPIRES_IN=24h
 
 # CORS Configuration
-FRONTEND_URL=https://carparts-staging.up.railway.app
+FRONTEND_URL=https://rasuki-carparts-staging.up.railway.app
 
 # Logging
 LOG_LEVEL=debug
