--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -141,8 +141,8 @@ jobs:
         run: |
           # Copy staging environment file
           cp .env.staging .env
-          # Deploy using Railway token with staging environment
-          railway up --detach --environment staging
+          # Deploy backend using Railway token with staging environment
+          railway up --detach --environment staging --service carparts-backend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
       
@@ -152,7 +152,7 @@ jobs:
           # Copy staging environment file
           cp .env.staging .env
           # Deploy frontend with staging environment
-          railway up --detach --environment staging
+          railway up --detach --environment staging --service carparts-frontend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
       
@@ -214,8 +214,8 @@ jobs:
         run: |
           # Copy production environment file
           cp .env.production .env
-          # Deploy using Railway token with production environment
-          railway up --detach --environment production
+          # Deploy backend using Railway token with production environment
+          railway up --detach --environment production --service carparts-backend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_PRODUCTION_TOKEN }}
       
@@ -225,7 +225,7 @@ jobs:
           # Copy production environment file
           cp .env.production .env
           # Deploy frontend with production environment
-          railway up --detach --environment production
+          railway up --detach --environment production --service carparts-frontend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_PRODUCTION_TOKEN }}
       
