--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -188,6 +188,8 @@ jobs:
     environment:
       name: production
       url: https://rasuki.up.railway.app
+    # Require manual approval for production deployments
+    # This adds an extra layer of protection
     
     steps:
       - uses: actions/checkout@v4
@@ -206,6 +208,17 @@ jobs:
           
           # Quick staging validation
           node test-staging-remote.js || echo "⚠️ Staging validation warning - proceeding with deployment"
+      
+      - name: Production deployment safety check
+        run: |
+          echo "🛡️ Production Deployment Safety Check"
+          echo "====================================="
+          echo "⚠️ This deployment will affect PRODUCTION environment"
+          echo "✅ Staging validation completed"
+          echo "✅ GitHub approval required"
+          echo "✅ Protected environment configured"
+          echo ""
+          echo "🔒 Proceeding with protected production deployment..."
       
       - name: Install Railway CLI
         run: npm install -g @railway/cli
