Fix frontend deployment context issue in GitHub Actions
🔧 FIXES:
- Frontend deployments failing due to wrong directory context
- GitHub Actions running 'railway up' from root instead of frontend directory
- Fixed by using 'cd frontend && railway up' in single command

🎯 CHANGES:
- Staging: cd frontend && railway up --detach --environment staging --service Frontend
- Production: cd frontend && railway up --detach --environment production --service frontend
- Updated deployment documentation with common issues and fixes

✅ RESULT: Frontend deployments should now succeed in GitHub Actions

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -150,9 +150,8 @@ jobs:
         run: |
           # Copy staging environment file to frontend directory
           cp .env.staging frontend/.env
-          # Change to frontend directory and deploy
-          cd frontend
-          railway up --detach --environment staging --service Frontend
+          # Deploy frontend from frontend directory
+          cd frontend && railway up --detach --environment staging --service Frontend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_STAGING_TOKEN }}
       
@@ -237,8 +236,7 @@ jobs:
           # Copy production environment file to frontend directory
           cp .env.production frontend/.env
           # Deploy frontend from frontend directory to production
-          cd frontend
-          railway up --detach --environment production --service frontend
+          cd frontend && railway up --detach --environment production --service frontend
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_PRODUCTION_TOKEN }}
       
